src/tests/math/conflict.output
Grammar

    0 $accept: stmt $end

    1 stmt: number stmt number
    2     | op

    3 op: "-" number
    4   | number " - " number

    5 number: "0"


Terminals, with rules where they appear

$end (0) 0
error (256)
"-" (258) 3
" - " (259) 4
"0" (260) 5


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
stmt (7)
    on left: 1 2, on right: 0 1
op (8)
    on left: 3 4, on right: 2
number (9)
    on left: 5, on right: 1 3 4


state 0

    0 $accept: . stmt $end

    "-"  shift, and go to state 1
    "0"  shift, and go to state 2

    stmt    go to state 3
    op      go to state 4
    number  go to state 5


state 1

    3 op: "-" . number

    "0"  shift, and go to state 2

    number  go to state 6


state 2

    5 number: "0" .

    $default  reduce using rule 5 (number)


state 3

    0 $accept: stmt . $end

    $end  shift, and go to state 7


state 4

    2 stmt: op .

    $default  reduce using rule 2 (stmt)


state 5

    1 stmt: number . stmt number
    4 op: number . " - " number

    "-"    shift, and go to state 1
    " - "  shift, and go to state 8
    "0"    shift, and go to state 2

    stmt    go to state 9
    op      go to state 4
    number  go to state 5


state 6

    3 op: "-" number .

    $default  reduce using rule 3 (op)


state 7

    0 $accept: stmt $end .

    $default  accept


state 8

    4 op: number " - " . number

    "0"  shift, and go to state 2

    number  go to state 10


state 9

    1 stmt: number stmt . number

    "0"  shift, and go to state 2

    number  go to state 11


state 10

    4 op: number " - " number .

    $default  reduce using rule 4 (op)


state 11

    1 stmt: number stmt number .

    $default  reduce using rule 1 (stmt)
